4th original song added and added entry to song titles enum. Added to jukebox.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1736,7 +1736,7 @@ Texture2D="\"Object\" "
 Texture="\"Object\" "
 SoundCue="\"Object\" "
 SoundBase="\"Object\" "
-BP_Jukebox_C=
+BP_Jukebox_C="\"Object.Songs\" "
 AudioComponent="\"Object\" "
 EditorNotifyObject="\"Object\" "
 EditorAnimBaseObj="\"Object\" "
@@ -1771,7 +1771,9 @@ SoundWave="\"Object\" "
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -1793,13 +1795,13 @@ RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
+OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/BP_Jukebox.BP_Jukebox
+OpenAssetsAtExit=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names.Enum_Jukebox_Song_Names
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1815,36 +1817,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Models/Biel/Biel
-MRUItem1=/Game/NPCs/BP_NPC
-MRUItem2=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem3=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem4=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem5=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
-MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem8=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
-MRUItem9=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
-MRUItem10=/Game/Maps/Main_Level/Main_Level
-MRUItem11=/Game/Shared_Game_Mechanics/Cards/BP_Card
-MRUItem12=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
-MRUItem13=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
-MRUItem14=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
-MRUItem15=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
-MRUItem16=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
-MRUItem17=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
-MRUItem18=/Game/NPCs/Animations/BP_End_Character_Specific_Action
-MRUItem19=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
-MRUItem20=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem21=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
-MRUItem22=/Game/NPCs/Animations/BP_Detach_Accessories_From_Each_Other
-MRUItem23=/Game/NPCs/Animations/BP_Attach_Accessories_Together
-MRUItem24=/Game/NPCs/Animations/BP_Accessory_Dequip
-MRUItem25=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
-MRUItem26=/Game/NPCs/BPI_NPC_Opponent
-MRUItem27=/Game/NPCs/Animations/BP_Accessory_Equip
-MRUItem28=/Game/UI/Diegetic/Misc/Drink_Menu/WBP_Drink_Names
-MRUItem29=/Game/NPCs/Animations/BP_Dialogue_Link
+MRUItem0=/Game/Misc_Mechanics/Jukebox/Enum_Jukebox_Song_Names
+MRUItem1=/Game/Misc_Mechanics/Jukebox/BP_Jukebox
+MRUItem2=/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_4_Cue
+MRUItem3=/Game/NPCs/Models/Biel/Biel
+MRUItem4=/Game/NPCs/BP_NPC
+MRUItem5=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem6=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem7=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem8=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem9=/Game/UI/Non_Diegetic/Rules/WBP_Rat_Screw_Rules
+MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
+MRUItem11=/Game/SFX/Dialogue/Biel/Extra_Idles_/Biel_30
+MRUItem12=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail
+MRUItem13=/Game/Maps/Main_Level/Main_Level
+MRUItem14=/Game/Shared_Game_Mechanics/Cards/BP_Card
+MRUItem15=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail
+MRUItem16=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail
+MRUItem17=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail
+MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail
+MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail
+MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail
+MRUItem21=/Game/NPCs/Animations/BP_End_Character_Specific_Action
+MRUItem22=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
+MRUItem23=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem24=/Game/NPCs/Animations/BP_Detach_Accessories_From_Each_Other
+MRUItem25=/Game/NPCs/Animations/BP_Attach_Accessories_Together
+MRUItem26=/Game/NPCs/Animations/BP_Accessory_Dequip
+MRUItem27=/Game/NPCs/Models/Dante_v2/Dante_V2_Skeleton
+MRUItem28=/Game/NPCs/BPI_NPC_Opponent
+MRUItem29=/Game/NPCs/Animations/BP_Accessory_Equip
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3333,6 +3335,7 @@ LastLogListing=FBXImport
 /Game/NPCs/Animations/BP_End_Character_Specific_Action.BP_End_Character_Specific_Action=1
 /Game/Shared_Game_Mechanics/Cards/BP_Card.BP_Card=1
 /Game/NPCs/Models/Biel/Biel_Character_Rig_UE.Biel_Character_Rig_UE=1
+/Game/SFX/Music/BG/Finished_Songs/7-Sins_-_4_Cue.7-Sins_-_4_Cue=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
