NPC Now hits the ball at the closest ball of their suit
Pool pockets now teleport balls away and set simulate physics false on them

When it swaps to either players turn, the camera view changes from overhead view if its npc, or cue ball if its the player.

infinite loop when white ball is potted for some reason gotta fix that

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -372,6 +372,7 @@ BP_CueBall_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Defau
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 End Turn and Check Results=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BP_Pool_Pocket_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -424,7 +425,7 @@ ContentBrowserDrawer.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game
-ContentBrowserTab1.SelectedPaths=/Game/NPCs
+ContentBrowserTab1.SelectedPaths=/Game/Player
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -1812,11 +1813,11 @@ K2Node_Variable="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1843,6 +1844,10 @@ RecentAssetEditors=
 RecentAssetEditors=
 None=======
 OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Game_Manager.BP_Pool_Game_Manager
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Pocket.BP_Pool_Pocket
+OpenAssetsAtExit=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable.BP_PoolTable
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1858,36 +1863,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/BP_NPC
-MRUItem1=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem2=/Game/Mini_Games/Pool/BP_CueBall
-MRUItem3=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
+MRUItem0=/Game/Player/BP_Player
+MRUItem1=/Game/Mini_Games/Pool/BP_PoolBall
+MRUItem2=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
+MRUItem3=/Game/Mini_Games/Pool/BP_Pool_Pocket
 MRUItem4=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
-MRUItem5=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
-MRUItem6=/Game/Mini_Games/Pool/BP_Pool_Pocket
-MRUItem7=/Game/Player/BP_Player
-MRUItem8=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
-MRUItem9=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
-MRUItem10=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
-MRUItem11=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
-MRUItem12=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
-MRUItem13=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
-MRUItem14=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem15=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
-MRUItem16=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem17=/Game/UI/Done_Assets/TOP_ARROW_RED
-MRUItem18=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn
-MRUItem19=/Game/Maps/Main_Level/Main_Level
-MRUItem20=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem21=/Game/UI/Done_Assets/DARTS_MINI_BAR_NO_SHADOW
-MRUItem22=/Game/UI/Done_Assets/DARTS_BIG_BAR
-MRUItem23=/Game/UI/Done_Assets/DARTS_BIG_BAR_HORIZONTAL
-MRUItem24=/Game/UI/Done_Assets/DARTS_BIG_BAR_VERTICAL
-MRUItem25=/Game/UI/Done_Assets/DARTS_SMALL_BAR_VERTICAL
-MRUItem26=/Game/UI/Done_Assets/DARTS_SMALL_BAR_HORIZONTAL
-MRUItem27=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Aim_Bar
-MRUItem28=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
-MRUItem29=/Game/Modes_Instances/Modes/GM_Bar
+MRUItem5=/Game/NPCs/BP_NPC
+MRUItem6=/Game/Shared_Game_Mechanics/BPI_Playing_Character
+MRUItem7=/Game/Mini_Games/Pool/BP_CueBall
+MRUItem8=/Game/Mini_Games/Darts/Dart_Board/BP_Dart_Board
+MRUItem9=/Game/UI/Non_Diegetic/Rules/WBP_Pool_Rules
+MRUItem10=/Game/UI/Non_Diegetic/Rules/WBP_Darts_Rules
+MRUItem11=/Game/UI/Non_Diegetic/Rules/WBP_I_Doubt_It_Rules
+MRUItem12=/Game/UI/Non_Diegetic/Rules/WBP_Auction_Rules
+MRUItem13=/Game/UI/Non_Diegetic/Rules/WBP_Rules_Text_Holder
+MRUItem14=/Game/Shared_Game_Mechanics/Turn_Taking/BP_Turn_Manager
+MRUItem15=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem16=/Game/Main_Game_Managers/I_Doubt_It/BP_I_Doubt_It_Game_Manager
+MRUItem17=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
+MRUItem18=/Game/UI/Done_Assets/TOP_ARROW_RED
+MRUItem19=/Game/UI/Diegetic/Main_Games/WBP_Current_Turn
+MRUItem20=/Game/Maps/Main_Level/Main_Level
+MRUItem21=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem22=/Game/UI/Done_Assets/DARTS_MINI_BAR_NO_SHADOW
+MRUItem23=/Game/UI/Done_Assets/DARTS_BIG_BAR
+MRUItem24=/Game/UI/Done_Assets/DARTS_BIG_BAR_HORIZONTAL
+MRUItem25=/Game/UI/Done_Assets/DARTS_BIG_BAR_VERTICAL
+MRUItem26=/Game/UI/Done_Assets/DARTS_SMALL_BAR_VERTICAL
+MRUItem27=/Game/UI/Done_Assets/DARTS_SMALL_BAR_HORIZONTAL
+MRUItem28=/Game/UI/Diegetic/Mini_Games/Darts/WBP_Darts_Aim_Bar
+MRUItem29=/Game/Mini_Games/Darts/BP_Dart_Game_Manager
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3388,7 +3393,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
@@ -3847,7 +3852,7 @@ bMaterialQualityUsed[3]=0
 PrimType=1
 
 [RootWindow]
-ScreenPosition=X=120.000 Y=18.000
+ScreenPosition=X=278.000 Y=34.000
 WindowSize=X=1287.000 Y=909.000
 InitiallyMaximized=True
 
