Some bug fixing that i dont remember
W commit

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1810,7 +1810,7 @@ K2Node_StructOperation="\"Object\" "
 K2Node_Variable="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1848,6 +1848,7 @@ OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Game_Manager.BP_Pool_Game_Manager
 OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Pocket.BP_Pool_Pocket
 OpenAssetsAtExit=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable.BP_PoolTable
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1863,8 +1864,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Player/BP_Player
-MRUItem1=/Game/Mini_Games/Pool/BP_PoolBall
+MRUItem0=/Game/Mini_Games/Pool/BP_PoolBall
+MRUItem1=/Game/Player/BP_Player
 MRUItem2=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
 MRUItem3=/Game/Mini_Games/Pool/BP_Pool_Pocket
 MRUItem4=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
