Linking dialogue almost all done just waiting on the rest of biel dialogue animations.
Link anim notifies in the linking between zilia and dante. However need some more animations for Biel to do the rest of the linking dialogue.
Now need to do functionality for activating these linking dialogues since they are kinda just random and mostly when the NPCs are not in a game.

--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -324,7 +324,7 @@ BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultVa
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-SkeletalMeshComponent=
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_Jukebox_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -381,6 +381,7 @@ BP_Dialogue_Link_C=
 SphereComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 EdGraphNode=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_Calculate_Random_State_Int_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -1776,8 +1777,8 @@ SoundCue="\"Object\" "
 SoundBase="\"Object\" "
 BP_Jukebox_C="\"Object.Songs\" \"Object.Songs.Songs\" "
 AudioComponent="\"Object\" "
-EditorNotifyObject="\"Object\" \"Object.Event.Event.Notify.Object.States\" "
-EditorAnimBaseObj="\"Object\" \"Object.Event.Event.Notify.Object.States\" "
+EditorNotifyObject="\"Object\" "
+EditorAnimBaseObj="\"Object\" "
 AnimGraphNode_UseCachedPose="\"Object\" "
 AnimGraphNode_SaveCachedPose="\"Object\" "
 ToolMenu="\"Object\" "
@@ -1828,54 +1829,51 @@ Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
 SphereComponent="\"Object\" "
+AnimStateTransitionNode="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletonEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 None=======
 None=======
 None=======
 None=======
 OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/NPCs/Animations/BP_Calculate_Random_State_Int.BP_Calculate_Random_State_Int
-OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
-OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_3_Base_Pose_Sofa_Lay_Back.Biel_Idle_3_Base_Pose_Sofa_Lay_Back
-OpenAssetsAtExit=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager.BP_Auction_Game_Manager
 OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel.Zilia_5_to_Biel
 OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/DT_Dialogue.DT_Dialogue
-OpenAssetsAtExit=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator.WBP_NPC_Game_Availability_Indicator
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/NPCs/Animations/BP_End_Character_Specific_Action.BP_End_Character_Specific_Action
+OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1891,36 +1889,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_3_Base_Pose_Sofa_Lay_Back
-MRUItem1=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_2_Base_Pose_Sofa_Sleep
-MRUItem2=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe
-MRUItem3=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_4_Base_Pose_Sofa_Play
-MRUItem4=/Game/NPCs/Animations/Assets/Dante/Dante_wiping_the_counter
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dante_smoking
-MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dante_hands_on_waist
-MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dante_drink_making
-MRUItem8=/Game/NPCs/Animations/Assets/Dante/Dante_darts_throw
-MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dante_base_pose
-MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dante_arms_crossed
-MRUItem11=/Game/NPCs/Animations/BP_Calculate_Random_State_Int
-MRUItem12=/Game/NPCs/Animations/BP_End_Character_Specific_Action
-MRUItem13=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem14=/Game/UI/Diegetic/NPCs/WBP_NPC_Game_Availability_Indicator
-MRUItem15=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem16=/Game/NPCs/BPI_NPC_Opponent
-MRUItem17=/Game/Main_Game_Managers/Auction/BP_Auction_Game_Manager
-MRUItem18=/Game/NPCs/Animations/Assets/Biel/Dialogue/React_To_Player/Biel_Idle_4_Base_Pose_Play_Biel_24
-MRUItem19=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem20=/Game/Mini_Games/Pool/BP_PoolBall
-MRUItem21=/Game/Player/BP_Player
-MRUItem22=/Game/Mini_Games/Pool/Pool_Table/BP_PoolTable
-MRUItem23=/Game/Mini_Games/Pool/BP_Pool_Pocket
-MRUItem24=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
-MRUItem25=/Game/NPCs/BP_NPC
-MRUItem26=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Winning/Biel_Idle_4_Base_Pose_Play_Biel_105
-MRUItem27=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Winning/Biel_Idle_4_Base_Pose_Play_Biel_59
-MRUItem28=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Loosing-Players_Advantage/Biel_Idle_4_Base_Pose_Play_Biel_104
-MRUItem29=/Game/NPCs/Animations/Assets/Biel/Dialogue/Rat_Screw/Loosing-Players_Advantage/Biel_Idle_4_Base_Pose_Play_Biel_58
+MRUItem0=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
+MRUItem1=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
+MRUItem2=/Game/NPCs/BP_NPC
+MRUItem3=/Game/NPCs/BPI_NPC_Opponent
+MRUItem4=/Game/Player/BP_Player
+MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
+MRUItem6=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_12_to_Dante
+MRUItem7=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem8=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
+MRUItem9=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem10=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem11=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3_
+MRUItem12=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
+MRUItem13=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_9_to_Dante
+MRUItem14=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
+MRUItem15=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem16=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_68
+MRUItem17=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_60
+MRUItem18=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_55
+MRUItem19=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_53
+MRUItem20=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_47
+MRUItem21=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_43
+MRUItem22=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_29
+MRUItem23=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_26
+MRUItem24=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_22
+MRUItem25=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_21
+MRUItem26=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_20
+MRUItem27=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_19
+MRUItem28=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_18
+MRUItem29=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_17
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3285,6 +3283,15 @@ SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
 Actor.Input=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Physics=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3446,7 +3453,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
@@ -3533,6 +3540,12 @@ None=======
 /Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_3_Base_Pose_Sofa_Lay_Back.Biel_Idle_3_Base_Pose_Sofa_Lay_Back=1
 /Game/NPCs/Animations/Assets/Biel/Dialogue/React_To_Player/Biel_Idle_4_Base_Pose_Play_Biel_24.Biel_Idle_4_Base_Pose_Play_Biel_24=1
 /Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_4_Base_Pose_Sofa_Play.Biel_Idle_4_Base_Pose_Sofa_Play=1
+/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__2__Skeleton.tuna_export_UE__2__Skeleton=1
+/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton.tuna_export_UE__3__Skeleton=1
+/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3_.tuna_export_UE__3_=1
+/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna.ABP_Tuna=1
+/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat.BP_Cat=1
+/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat.BP_Leading_Cat=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -3562,7 +3575,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=True
+bImportAnimations=False
 bImportMaterials=True
 bImportTextures=True
 
@@ -3626,7 +3639,7 @@ AnimationLength=FBXALIT_ExportedTime
 FrameImportRange=(Min=0,Max=0)
 bUseDefaultSampleRate=True
 CustomSampleRate=0
-bSnapToClosestFrameBoundary=False
+bSnapToClosestFrameBoundary=True
 bImportCustomAttribute=True
 bDeleteExistingCustomAttributeCurves=False
 bDeleteExistingNonCurveCustomAttributes=False
