--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -324,7 +324,7 @@ BP_NPC_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultVa
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values
 MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+SkeletalMeshComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_Jukebox_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 AudioComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -341,7 +341,7 @@ K2Node_Variable=
 MulticastInlineDelegatePropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 ToolMenu=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-K2Node=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+K2Node=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 EdGraph=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 SplineComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -364,11 +364,11 @@ DecalActor=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.Default
 MeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 BP_Dart_Board_C=
 BP_Player_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
-BP_Pool_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+BP_Pool_Game_Manager_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 NPC Hit Ball=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 NPC Hit Ball_23=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_PoolBall_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
-Find Closest Ball=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
+Find Closest Ball=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 Find Closest Ball_23=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_CueBall_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
@@ -382,6 +382,7 @@ SphereComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.De
 EdGraphNode=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BP_Calculate_Random_State_Int_C=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
+K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 
 [ContentBrowser]
 SequenceBrowser.ThumbnailSize=2
@@ -436,7 +437,7 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
-ContentBrowserTab1.SelectedPaths=/Game/NPCs/Animations/Assets/Biel/Dialogue/React_To_Player
+ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
 None=======
 None=======
 None=======
@@ -1832,16 +1833,17 @@ SphereComponent="\"Object\" "
 AnimStateTransitionNode="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -1863,17 +1865,12 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
 None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/NPCs/BP_NPC.BP_NPC
-OpenAssetsAtExit=/Game/NPCs/BPI_NPC_Opponent.BPI_NPC_Opponent
+OpenAssetsAtExit=/Game/Mini_Games/Pool/BP_Pool_Game_Manager.BP_Pool_Game_Manager
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel.Zilia_5_to_Biel
-OpenAssetsAtExit=/Game/NPCs/Dialogue_Specific/DT_Dialogue.DT_Dialogue
-OpenAssetsAtExit=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC.ABP_NPC
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1889,36 +1886,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
+MRUItem0=/Game/Mini_Games/Pool/BP_Pool_Game_Manager
 MRUItem1=/Game/NPCs/Animations/Animation_Blueprints/ABP_NPC
-MRUItem2=/Game/NPCs/BP_NPC
-MRUItem3=/Game/NPCs/BPI_NPC_Opponent
+MRUItem2=/Game/NPCs/Dialogue_Specific/DT_Dialogue
+MRUItem3=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel
 MRUItem4=/Game/Player/BP_Player
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem6=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_12_to_Dante
-MRUItem7=/Game/NPCs/Dialogue_Specific/DT_Dialogue
-MRUItem8=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
-MRUItem9=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem10=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem11=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3_
-MRUItem12=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
-MRUItem13=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_9_to_Dante
-MRUItem14=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
-MRUItem15=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
-MRUItem16=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_68
-MRUItem17=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_60
-MRUItem18=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_55
-MRUItem19=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_53
-MRUItem20=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_47
-MRUItem21=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_43
-MRUItem22=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_29
-MRUItem23=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_26
-MRUItem24=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_22
-MRUItem25=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_21
-MRUItem26=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_20
-MRUItem27=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_19
-MRUItem28=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_18
-MRUItem29=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_17
+MRUItem5=/Game/NPCs/BPI_NPC_Opponent
+MRUItem6=/Game/NPCs/BP_NPC
+MRUItem7=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
+MRUItem8=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_12_to_Dante
+MRUItem9=/Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat
+MRUItem10=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem11=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem12=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3_
+MRUItem13=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
+MRUItem14=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_9_to_Dante
+MRUItem15=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_6_to_Biel
+MRUItem16=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_13_to_Dante
+MRUItem17=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_68
+MRUItem18=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_60
+MRUItem19=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_55
+MRUItem20=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_53
+MRUItem21=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_47
+MRUItem22=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_43
+MRUItem23=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_29
+MRUItem24=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_26
+MRUItem25=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_22
+MRUItem26=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_21
+MRUItem27=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_20
+MRUItem28=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_19
+MRUItem29=/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_18
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3453,7 +3450,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Mini_Games/Pool/BP_PoolBall.BP_PoolBall=1
@@ -3546,6 +3543,7 @@ None=======
 /Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna.ABP_Tuna=1
 /Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat.BP_Cat=1
 /Game/Misc_Mechanics/Leading_Cat/BP_Leading_Cat.BP_Leading_Cat=1
+/Game/NPCs/Animations/Assets/Zilia/Dialogue/Zilia_5_to_Biel.Zilia_5_to_Biel=1
 
 [DetailCategoriesAdvanced]
 WorldSettings.PrecomputedVisibility=False
@@ -3925,7 +3923,7 @@ PrimType=1
 
 [RootWindow]
 ScreenPosition=X=278.000 Y=34.000
-ScreenPosition=X=2040.000 Y=18.000
+ScreenPosition=X=313.000 Y=62.000
 None=======
 WindowSize=X=1287.000 Y=909.000
 InitiallyMaximized=True
@@ -3948,8 +3946,8 @@ Project=C:/UE_5.3/
 LastDirectory=
 None=======
 None=======
-RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
