--- a/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_7_Sins/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -334,7 +334,7 @@ MaterialInstanceConstant=
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 SkeletalMeshComponent=
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Materials.MaterialList,StaticMeshActor.Collision.Collision,BP_NPC_C.Physics.ConstraintsGroup,BP_NPC_C.TransformCommon.Transform,BP_NPC_C.Materials.MaterialList
+SkeletalMeshComponent=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.Songs,K2Node_VariableGet.DefaultValueCategory.Songs,SkeletalMeshActor.Physics.ConstraintsGroup,SkeletalMeshActor.Collision.Collision,SkeletalMeshActor.TransformCommon.Transform,SkeletalMeshActor.Materials.MaterialList
 None=======
@@ -464,7 +464,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SelectedPaths=/Game/Player
 ContentBrowserTab1.SelectedPaths=/Game/NPCs
 ContentBrowserTab1.SelectedPaths=/Game/Mini_Games/Pool
-ContentBrowserTab1.SelectedPaths=/Game/Maps/Main_Level
+ContentBrowserTab1.SelectedPaths=/Game/NPCs/Models/Zilia
 None=======
 None=======
 None=======
@@ -508,7 +508,7 @@ ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main_Level/Main_Level
+LastLevel=/Game/Maps/Test_Level/ThirdPersonMap
 
 [ModuleFileTracking]
 Project_7_Sins.TimeStamp=2025.03.22-16.28.40
@@ -1596,7 +1596,7 @@ ExternalImagePicker.LastCompileMethod=Unknown
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.ReductionSettings\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -1777,7 +1777,7 @@ LODInfoUILayout="\"Object\" \"Object.LODInfo.BuildSettings\" \"Object.LODInfo.Re
 UserDefinedEnum="\"Object\" "
 Enum="\"Object\" "
 Field="\"Object\" "
-SkeletalMeshActor=
+SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance\" \"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BoneProxy="\"Object\" "
 PersonaPreviewSceneAnimationController="\"Object\" "
 PersonaPreviewSceneController="\"Object\" "
@@ -1798,8 +1798,8 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 BP_NPC_C="\"Object.NPC Info.Game -> Difficulty\" \"Object.Actor.Tags\" "
-Character="\"Object.Actor.Tags\" "
-Pawn="\"Object.Actor.Tags\" "
+Character="\"Object.NPC Info.Game -> Difficulty\" \"Object.Actor.Tags\" "
+Pawn="\"Object.NPC Info.Game -> Difficulty\" \"Object.Actor.Tags\" "
 SpotLight=
 Light=
 RectLight=
@@ -1875,23 +1875,23 @@ NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
 GroupActor="\"Object\" "
 BP_Cat_C="\"Object.References.Possible Points\" "
+ClothPaintTool_SmoothSettings="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -1915,12 +1915,6 @@ None=======
 None=======
 None=======
 None=======
-OpenAssetsAtExit=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat.BP_Cat
-OpenAssetsAtExit=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton.tuna_export_UE__3__Skeleton
-OpenAssetsAtExit=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna.ABP_Tuna
-OpenAssetsAtExit=/Game/NPCs/Models/Zilia/United_Model/Zilia_united.Zilia_united
-OpenAssetsAtExit=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager.BP_Rat_Screw_Game_Manager
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1936,36 +1930,35 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Maps/Test_Level/ThirdPersonMap.ThirdPersonMap", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Maps/Main_Level/Main_Level
-MRUItem1=/Game/Maps/Test_Level/ThirdPersonMap
-MRUItem2=/Game/Player/BP_Player
-MRUItem3=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
-MRUItem4=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
-MRUItem5=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
-MRUItem6=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
-MRUItem7=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
-MRUItem8=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
-MRUItem9=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
-MRUItem10=/Game/Environment/Posters/Models/poster1
-MRUItem11=/Game/Environment/Custom_Props/Materials/Plants
-MRUItem12=/Game/Environment/Posters/Material/Posters
-MRUItem13=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
-MRUItem14=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
-MRUItem15=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
-MRUItem16=/Game/NPCs/Models/Biel/Materials/MI_Biel_Hair
-MRUItem17=/Game/Environment/Pictures/Textures/T_Prop_01_A
-MRUItem18=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
-MRUItem19=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
-MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
-MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/small_shaker_cup
-MRUItem22=/Game/NPCs/Models/Dante_V3/Dante_V3
-MRUItem23=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__2_
-MRUItem24=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
-MRUItem25=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
-MRUItem26=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_skin
-MRUItem27=/Game/NPCs/BP_NPC
-MRUItem28=/Game/Shared_Game_Mechanics/BPI_Playing_Character
-MRUItem29=/Game/Mini_Games/Pool/BP_CueBall
+MRUItem0=/Game/NPCs/Models/Zilia/zilia
+MRUItem1=/Game/Player/BP_Player
+MRUItem2=/Game/Main_Game_Managers/Rat_Screw/BP_Rat_Screw_Game_Manager
+MRUItem3=/Game/NPCs/Models/Zilia/United_Model/Zilia_united
+MRUItem4=/Game/Misc_Mechanics/Shared_Cat_Assets/ABP_Tuna
+MRUItem5=/Game/Misc_Mechanics/Shared_Cat_Assets/Model/tuna_export_UE__3__Skeleton
+MRUItem6=/Game/Misc_Mechanics/Schrodingers_Cat/BP_Cat
+MRUItem7=/Game/Maps/Main_Level/Main_Level
+MRUItem8=/Game/Maps/Test_Level/ThirdPersonMap
+MRUItem9=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_63_to_player_and_Zilia
+MRUItem10=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_66_to_Zilia
+MRUItem11=/Game/NPCs/Animations/Assets/Dante/Dialogue/Dante_69
+MRUItem12=/Game/Environment/Posters/Models/poster1
+MRUItem13=/Game/Environment/Custom_Props/Materials/Plants
+MRUItem14=/Game/Environment/Posters/Material/Posters
+MRUItem15=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_dress
+MRUItem16=/Game/NPCs/Models/Biel/Textures/Body/Biel_Body_LP_Biel_Body_LP_UVs_lambert1SG_BaseColor
+MRUItem17=/Game/NPCs/Models/Biel/Materials/MI_Biel_Body
+MRUItem18=/Game/NPCs/Models/Biel/Materials/MI_Biel_Hair
+MRUItem19=/Game/Environment/Pictures/Textures/T_Prop_01_A
+MRUItem20=/Game/Environment/Custom_Props/Models/cocktail_pack/Textures/T_Prop_01_A
+MRUItem21=/Game/Environment/Custom_Props/Models/cocktail_pack/Materials/MI_Cocktails_Opaque
+MRUItem22=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/Shaker_main_body
+MRUItem23=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/small_shaker_cup
+MRUItem24=/Game/NPCs/Models/Dante_V3/Dante_V3
+MRUItem25=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/rag
+MRUItem26=/Game/NPCs/Models/Zilia/Textures/zilia_skin_BaseColor
+MRUItem27=/Game/NPCs/Models/Zilia/Materials/MI_Zilia_skin
+MRUItem28=/Game/NPCs/BP_NPC
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -3445,6 +3438,7 @@ CharacterMovementComponent.Cooking=True
 CharacterMovementComponent.Events=True
 BP_Leading_Cat_C.TransformCommon=True
 BP_Leading_Cat_C.Networking=True
+ClothPaintTool_SmoothSettings.ToolSettings=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -3877,6 +3871,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/NPCs/Models/Zilia/zilia.zilia;
 RecentlyPlaced=/Game/NPCs/Animations/Assets/Biel/Idle_Sofa/Biel_Idle_1_Base_Pose_Sofa_Breathe.Biel_Idle_1_Base_Pose_Sofa_Breathe;
 RecentlyPlaced=/Game/NPCs/Models/Biel/Furniture_Test/Biels_furniture.Biels_furniture;
 RecentlyPlaced=/Game/NPCs/Models/Biel/Furniture_Test/Biel_Idle_3_Base_Pose_Sofa_Lay_Back_Anim.Biel_Idle_3_Base_Pose_Sofa_Lay_Back_Anim;
@@ -3896,12 +3891,6 @@ RecentlyPlaced=/Game/Environment/Pictures/Models/SM_Frame_Tuna.SM_Frame_Tuna;/En
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/wrath_cocktail.wrath_cocktail;
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/sloth_cocktail.sloth_cocktail;
 RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/pride_cocktail.pride_cocktail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/lust_cocktail.lust_cocktail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/greed_cocktail.greed_cocktail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/gluttony_cockatail.gluttony_cockatail;
-RecentlyPlaced=/Game/Environment/Custom_Props/Models/cocktail_pack/Models/envy_cocktail.envy_cocktail;
-RecentlyPlaced=/Game/NPCs/Models/Dante_V3/Dante_V3.Dante_V3;
-RecentlyPlaced=/Game/NPCs/Models/Biel/Biel.Biel;
 None=======
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -4135,11 +4124,11 @@ PrimType=1
 [RootWindow]
 ScreenPosition=X=278.000 Y=34.000
 ScreenPosition=X=313.000 Y=62.000
-ScreenPosition=X=93.600 Y=95.200
+ScreenPosition=X=93.000 Y=95.000
 None=======
 None=======
 WindowSize=X=1287.000 Y=909.000
-WindowSize=X=1290.400 Y=912.000
+WindowSize=X=1291.000 Y=912.000
 InitiallyMaximized=True
 
 [Directories2]
@@ -4161,8 +4150,8 @@ LastDirectory=
 None=======
 None=======
 None=======
-RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UE5/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
@@ -4289,4 +4278,8 @@ Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 
 [/Script/MeshPaintEditorMode.MeshPaintModeSettings]
 ColorViewMode=Normal
+
+[MeshPaintEdit]
+DefaultBrushRadius=6
+DefaultBrushStrength=0.763999999
 
